# pacman

./: .clangd  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/components/: entity.cpp  entity.h  registry.cpp  registry.h  sprite_component.cpp  sprite_component.h
src/game/: game.cpp  game.h  time.cpp  time.h  timer.h
src/pacman/: pacman.cpp  pacman.h
